player paddle done

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Assets\Scripts\Brick.cs" />
     <Compile Include="Assets\Scripts\Game.cs" />
     <Compile Include="Assets\Scripts\DefinedColors.cs" />
+    <Compile Include="Assets\Scripts\Paddle.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
