Repeat the game Fall the ball Collecting scrores fixing frying issues with the ball
Stage 1 done

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Assets\Scripts\Game.cs" />
     <Compile Include="Assets\Scripts\DefinedColors.cs" />
     <Compile Include="Assets\Scripts\Paddle.cs" />
+    <Compile Include="Assets\Scripts\BallFall.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
